--- a/index.html
+++ b/index.html
@@ -7,10 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/index-style.css">
     <title>Muzik Dukkanim</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand nav-link disabled" tabindex="-1" href="#" aria-disabled="true">Müzik Dükkanım</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Ana Sayfa<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="products.html">Ürünlerimiz</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about-us.html">Hakkımızda</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4 text-center">Merhaba!</h1>
+            <p class="parag text-center">Müzik Dükkanım sitemize hoş geldiniz! Bu sitede çeşitli müzik aletlerini
+                bulabilirsiniz. Uygun fiyatlarımız ve kaliteli ürünlerimiz için <a href="products.html">Ürünlerimiz</a>
+                sayfamızı
+                ziyaret edebilirsiniz.
+            </p>
+            <hr>
+            <p class="parag-2 h5 text-center">Sitemizde Bulunan Müzik Aletleri</p>
+            <div class="d-flex justify-content-center">
+                <ul>
+                    <li class="ml-auto">Gitar</li>
+                    <li class="ml-auto">Davul</li>
+                    <li class="ml-auto">Piyano</li>
+                    <li class="ml-auto">Keman</li>
+                </ul>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a class="btn btn-primary" href="about-us.html">Hakkımızda</a>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
