--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand nav-link disabled" tabindex="-1" href="#" aria-disabled="true">Müzik Dükkanım</a>
+        <a class="navbar-brand nav-link" href="index.html" aria-disabled="true">Müzik Dükkanım</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
