--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Ana Sayfa<span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" href="index.html">Ana Sayfa<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="products.html">Ürünlerimiz</a>
