--- a/about-us.html
+++ b/about-us.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand nav-link" href="index.html" aria-disabled="true">Müzik Dükkanım</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -32,7 +33,7 @@
             </ul>
         </div>
     </nav>
-
+    <!-- CARD -->
     <div class="card w-100">
         <div class="card-body">
             <h5 class="card-title text-center display-4">Hakkımızda</h5>
